Добавили интерфейс IKeysSequenceSource и две реализации для консольного ввода и для тестов.

--- a/botworld.bl.tests/botworld.bl.tests.csproj
+++ b/botworld.bl.tests/botworld.bl.tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BotTests.cs" />
+    <Compile Include="PredefinedKeysSequenceSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
