--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="Bot.cs" />
     <Compile Include="BotAction.cs" />
+    <Compile Include="ConsoleKeysSequenceSource.cs" />
+    <Compile Include="IKeysSequenceSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
