--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -45,10 +45,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="AttackResponseAction.cs" />
+    <Compile Include="IPointsProvider.cs" />
+    <Compile Include="InvasionResponseAction.cs" />
     <Compile Include="BotAction.cs" />
     <Compile Include="ConsoleKeysSequenceSource.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="IKeysSequenceSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Gem.cs" />
+    <Compile Include="Bomb.cs" />
+    <Compile Include="Wall.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
