Переименовали Bomb в Mine. Прописали свойства Location и Type у IEntity. Тест для Gem.

--- a/botworld.bl.tests/botworld.bl.tests.csproj
+++ b/botworld.bl.tests/botworld.bl.tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GemTests.cs" />
     <Compile Include="BotTests.cs" />
     <Compile Include="PredefinedKeysSequenceSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
