--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -46,15 +46,17 @@
   <ItemGroup>
     <Compile Include="Bot.cs" />
     <Compile Include="AttackResponseAction.cs" />
+    <Compile Include="EntityType.cs" />
     <Compile Include="IPointsProvider.cs" />
     <Compile Include="InvasionResponseAction.cs" />
     <Compile Include="BotAction.cs" />
     <Compile Include="ConsoleKeysSequenceSource.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="IKeysSequenceSource.cs" />
+    <Compile Include="Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Gem.cs" />
-    <Compile Include="Bomb.cs" />
+    <Compile Include="Mine.cs" />
     <Compile Include="Wall.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
