Выполнение нескольких команд ботом при нажатии одной клавиши на клавиатуре

--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direction.cs" />
     <Compile Include="BotInfo.cs" />
     <Compile Include="HumanControlBotIntelligence.cs" />
     <Compile Include="IBotIntelligence.cs" />
