--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Direction.cs" />
     <Compile Include="BotInfo.cs" />
+    <Compile Include="EntityInfo.cs" />
     <Compile Include="HumanControlBotIntelligence.cs" />
     <Compile Include="IBotIntelligence.cs" />
     <Compile Include="Bot.cs" />
