--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BotInfo.cs" />
     <Compile Include="EntityInfo.cs" />
     <Compile Include="HumanControlBotIntelligence.cs" />
+    <Compile Include="IBot.cs" />
     <Compile Include="IBotIntelligence.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="AttackResponseAction.cs" />
