Сделали Game и GameScenario

--- a/botworld.bl/botworld.bl.csproj
+++ b/botworld.bl/botworld.bl.csproj
@@ -49,12 +49,15 @@
     <Compile Include="BotInfo.cs" />
     <Compile Include="EntitiesExtensions.cs" />
     <Compile Include="EntityInfo.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="HumanControlBotIntelligence.cs" />
     <Compile Include="IBot.cs" />
     <Compile Include="IBotIntelligence.cs" />
     <Compile Include="Bot.cs" />
     <Compile Include="AttackResponseAction.cs" />
     <Compile Include="EntityType.cs" />
+    <Compile Include="IGameScenario.cs" />
+    <Compile Include="IGame.cs" />
     <Compile Include="IMap.cs" />
     <Compile Include="IPointsProvider.cs" />
     <Compile Include="InvasionResponseAction.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="IKeysSequenceSource.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="PointsScenario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Gem.cs" />
     <Compile Include="Mine.cs" />
