--- a/botworld.bl.tests/botworld.bl.tests.csproj
+++ b/botworld.bl.tests/botworld.bl.tests.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PointsScenarioTests.cs" />
     <Compile Include="HumanControlBotIntelligenceTests.cs" />
     <Compile Include="MapTests.cs" />
     <Compile Include="WallTests.cs" />
