Создание Bot'ов из файла-уровня ogmo

--- a/botworld.ogmo/botworld.ogmo.csproj
+++ b/botworld.ogmo/botworld.ogmo.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BotIntelligenceFactory.cs" />
     <Compile Include="EntitiesFactory.cs" />
     <Compile Include="GameScenariosFactory.cs" />
     <Compile Include="LevelSettingsBuilder.cs" />
