--- a/botworld.ogmo/botworld.ogmo.csproj
+++ b/botworld.ogmo/botworld.ogmo.csproj
@@ -49,7 +49,10 @@
   <ItemGroup>
     <Compile Include="BotIntelligenceFactory.cs" />
     <Compile Include="EntitiesFactory.cs" />
+    <Compile Include="GameLoader.cs" />
     <Compile Include="GameScenariosFactory.cs" />
+    <Compile Include="GameBuilder.cs" />
+    <Compile Include="MapBuilder.cs" />
     <Compile Include="LevelSettingsBuilder.cs" />
     <Compile Include="LevelSettings.cs" />
     <Compile Include="ParsingHelper.cs" />
